feat: resolve ETL datasources from datasource ids